--- a/index.html
+++ b/index.html
@@ -5,8 +5,122 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
+    <link rel="shortcut icon" href="asset/favicon-32x32 (3).png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+            <header>
+                <div class="container">
+                <nav class="flex">
+                    <img src="asset/logo.svg" alt="logo">
+                <button style="background-color: white; border-radius: 40px; margin: 4px 2px; padding: 15px 60px; cursor: pointer;font-weight: 700; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);">Try it free</button>
+            </nav>
+            <div class="flex">
+                <div>
+            <h2>Build The Community Your Fans Will Love</h2>
+            <p>
+                Huddle re-imagines the way we build communities. 
+                You have a voice but so does your audience. 
+                Create connections with your users as you engage in genuine discussion.
+            </p>
+                <Button style="background-color: hsl(322, 100%, 66%); border-radius: 40px; color: white; margin: 4px 2px; padding: 15px 60px; cursor: pointer;font-weight: 700; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); ">Get Started For Free</Button>
+            </div>
+               <div>
+                <img src="asset/illustration-mockups.svg" alt="jpeg">
+               </div>
+            </div>
+        </div>
+            </header>
+            <main>
+            <div class="container">
+            <div class="box flex">
+                <div>
+                <h2>Grow Together</h2>
+                <p>
+                    Generate meaningful discussion with your audience and build a strong, loyal community. Think of insightful information you missed out on with a feedback form.
+                </p>
+            </div>
+                  <div>
+                    <img src="asset/illustration-grow-together.svg" alt="jpegs">
+                  </div>
+            </div>
+            <div class="box flex">
+                <div>
+                    <img src="asset/illustration-flowing-conversation.svg" alt="jpegs">
+                   </div>
+                <div>
+                <h2>Flowing Conversations</h2>
+                <p>
+                   You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+                </p>
+            </div>
+            </div>
+            <div class="box flex">
+                <div>
+                <h2>Your users</h2>
+                <p>
+                    Huddle re-imagines the way we build communities. You have a voice but so does your audience. Create connections with your users as you engage in genuine discussion.
+                </p>
+            </div>
+                   <div>
+                    <img src="asset/illustration-your-users.svg" alt="jpegs">
+                   </div>
+            </div>
+        </div>
+    </div>
+    </main>
+    <div class="container center">
+    <div class="box box2">
+        <h2>Ready To Build Your Community</h2>
+        <Button style="background-color: hsl(322, 100%, 66%); border-radius: 40px; color: white; margin: 4px 2px; padding: 15px 60px; cursor: pointer;font-weight: 700; box-shadow: 0 0 5px rgba(0, 0, 0, 0.15); ">Get Started For Free</Button> 
+    </div>
+</div>
+            <footer>
+                <div class="container">
+                <img src="asset/logo.svg" alt="logo">
+                <div class="flex direction">
+                    <div>
+                <ul>
+                    <li>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do elusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </li>
+                    <li>
+                        +1-543-123-4567
+                    </li>
+                    <li>
+                        example@huddle.com
+                    </li>
+                </ul>
+            </div>
+
+                <div>
+                    <ul>
+                        <li>About Us</li>
+                        <li>What We Do</li>
+                        <li>FAQ</li>
+                    </ul>
+                </div>
+
+                    <div>
+                        <ul>
+                            <li>Career</li>
+                            <li>Blog</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <ul>
+                            <li><a class="work" href="a"><i class="fab fa"></i></a></li>
+                            <li><a class="work" href="b"><i class="fab fa"></i></a></li>
+                            <li><a class="work" href="c"><i class="fab fa"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <p style="text-align: right;">&copy; @Copyright2018Huddle.All rights reserved</p>
+            </div>
+            </footer>
 </body>
 </html>
